--- a/Implementation/sc_frontend/client-web-app/src/components/SwipeCard/Swiper.css
+++ b/Implementation/sc_frontend/client-web-app/src/components/SwipeCard/Swiper.css
@@ -12,13 +12,16 @@
 .cardContainer{
     width: 40vh; /* 40% of the viewport height vh*/
     height: 60vh;
-    background-color: rgb(255, 0, 0);
+    background-color: transparent;
     position: relative;
 }
 
 .swipeableCard{
     width: 100%;
     height: 100%;
-    background-color: rgb(0, 255, 0);
+    background-color: transparent;
     position: absolute;
+    border: 0.5rem outset transparent;
+    border-radius: 2.4rem;
+    overflow: hidden;
 }
