--- a/Implementation/sc_frontend/client-web-app/src/components/SwipeCard/MatchOverlay.css
+++ b/Implementation/sc_frontend/client-web-app/src/components/SwipeCard/MatchOverlay.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Cookie&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Leckerli+One&display=swap');
 .matchOV-container{
     position: absolute;     
     display: flex;
@@ -18,8 +18,8 @@
     position: relative;
 }
 .matchOV-title {
-    font-family: 'Cookie', cursive;
-    font-size: 50px;
+    font-family: 'Leckerli', cursive;
+    font-size: 2.5rem;
     color: #00ff00;
     flex-direction: column;
 }
